# cmake_hello

./: .gitignore  CMakeLists.txt  README.md
app/gui_client/: CMakeLists.txt  form_gui.cpp  form_gui.h  main.cpp
framework/: CMakeLists.txt
framework/include/: framework_file.h
framework/src/: CMakeLists.txt  framework_file.cpp
framework/test/: CMakeLists.txt  test_src_file.cpp
hardware/: CMakeLists.txt
hardware/include/: hardware_file.h
hardware/src/: CMakeLists.txt  hardware_file.cpp
